--- a/Emoji Slot Machine/Base.lproj/Main.storyboard
+++ b/Emoji Slot Machine/Base.lproj/Main.storyboard
@@ -1,14 +1,18 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16D30" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Emoji_Slot_Machine" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +20,119 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="lPO-H0-2jC">
+                                <rect key="frame" x="87.5" y="35" width="175" height="30"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Emoji Slot Machine!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iJg-ZH-gyv">
+                                        <rect key="frame" x="0.0" y="0.0" width="175" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="CIp-cG-iWR"/>
+                                            <constraint firstAttribute="width" constant="175" id="beJ-hM-7yA"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="iJg-ZH-gyv" firstAttribute="top" secondItem="lPO-H0-2jC" secondAttribute="top" constant="10" id="0Q3-RZ-RBR"/>
+                                    <constraint firstItem="iJg-ZH-gyv" firstAttribute="centerX" secondItem="lPO-H0-2jC" secondAttribute="centerX" id="4mZ-Gr-pxQ"/>
+                                </constraints>
+                            </stackView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ook-Oq-tlL">
+                                <rect key="frame" x="150" y="271.5" width="75" height="125"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="75" id="30x-br-wJ2"/>
+                                    <constraint firstAttribute="height" constant="125" id="CwS-Z6-VV8"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8q4-bF-yEl">
+                                <rect key="frame" x="230" y="271" width="75" height="125"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="125" id="G05-Ob-eeh"/>
+                                    <constraint firstAttribute="width" constant="75" id="tpC-o5-AM2"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your Score:" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="brC-7k-JWQ">
+                                <rect key="frame" x="140.5" y="497.5" width="95" height="25"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="95" id="jED-04-QWn"/>
+                                    <constraint firstAttribute="height" constant="25" id="mgq-D8-KkY"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wNF-pX-ozd">
+                                <rect key="frame" x="170" y="97" width="35" height="30"/>
+                                <color key="backgroundColor" red="0.50196081400000003" green="0.0" blue="0.25098040700000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <state key="normal" title="Spin!">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="spinButtonTouched:" destination="BYZ-38-t0r" eventType="touchUpInside" id="2F7-Sx-rGO"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vje-T4-tL7">
+                                <rect key="frame" x="166" y="552" width="42" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="150" id="Jhw-Ed-eDg"/>
+                                    <constraint firstAttribute="height" constant="40" id="MGm-gI-a9j"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Jackpot!!!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="APJ-Gw-zdz">
+                                <rect key="frame" x="87" y="135" width="200" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="iPD-mV-cCi"/>
+                                    <constraint firstAttribute="height" constant="40" id="zUo-X0-Obi"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uSe-1C-tlB">
+                                <rect key="frame" x="58" y="271" width="75" height="125"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="8q4-bF-yEl" firstAttribute="leading" secondItem="Ook-Oq-tlL" secondAttribute="trailing" constant="5" id="7oZ-oF-MfH"/>
+                            <constraint firstItem="APJ-Gw-zdz" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="A11-xL-GML"/>
+                            <constraint firstItem="Ook-Oq-tlL" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="B7N-ig-Tpq"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Vje-T4-tL7" secondAttribute="bottom" constant="75" id="LCI-e3-YdU"/>
+                            <constraint firstItem="Vje-T4-tL7" firstAttribute="top" secondItem="brC-7k-JWQ" secondAttribute="bottom" constant="30" id="M5E-LS-c2G"/>
+                            <constraint firstItem="brC-7k-JWQ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="rbh-Bp-fRE"/>
+                            <constraint firstItem="APJ-Gw-zdz" firstAttribute="top" secondItem="wNF-pX-ozd" secondAttribute="bottom" constant="5" id="sfN-FN-qSj"/>
+                            <constraint firstItem="Ook-Oq-tlL" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="tIh-Qa-LYI"/>
+                            <constraint firstItem="uSe-1C-tlB" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="zKW-h0-N5j"/>
+                            <constraint firstItem="8q4-bF-yEl" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="zVW-G1-YQw"/>
+                            <constraint firstAttribute="trailing" secondItem="uSe-1C-tlB" secondAttribute="trailing" constant="5" id="zea-OB-6kY"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="firstSlot" destination="uSe-1C-tlB" id="liM-ow-HDs"/>
+                        <outlet property="jackpot" destination="APJ-Gw-zdz" id="jzk-iN-Pze"/>
+                        <outlet property="scoreLabel" destination="Vje-T4-tL7" id="cdL-gQ-X17"/>
+                        <outlet property="secondSlot" destination="Ook-Oq-tlL" id="grv-JC-vwI"/>
+                        <outlet property="thirdSlot" destination="8q4-bF-yEl" id="z6C-YY-OaU"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="120.8" y="129.98500749625188"/>
         </scene>
     </scenes>
 </document>
